--- a/frontend/src/blocks/page/__wrap/page__wrap.css
+++ b/frontend/src/blocks/page/__wrap/page__wrap.css
@@ -1,6 +1,7 @@
 .page__wrap {
   margin: 0 auto;
   max-width: 880px;
+  min-width: 320px;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
