--- a/frontend/src/blocks/form/__input-error/form__input-error.css
+++ b/frontend/src/blocks/form/__input-error/form__input-error.css
@@ -1,8 +1,8 @@
 .form__input-error {
-  min-height: 15px;
+  display: block;
+  min-height: 30px;
   font-size: 12px;
   line-height: 1.25;
   font-weight: 400;
   color: #f00;
-  visibility: hidden;
 }
