--- a/frontend/src/blocks/popup/__subtitle/popup__subtitle.css
+++ b/frontend/src/blocks/popup/__subtitle/popup__subtitle.css
@@ -1,5 +1,5 @@
 .popup__subtitle {
-  margin: 0;
+  margin: 0 0 40px 0;
   font-size: 18px;
   line-height: 1.3;
   font-weight: 400;
@@ -7,6 +7,7 @@
 
 @media screen and (max-width: 698px) {
   .popup__subtitle {
+    margin-bottom: 30px;
     font-size: 16px;
   }
 }
